# grpc-calculator

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  k6-test.js
proto/: calculator.proto
src/: client.rs  server.rs  serverdb.rs
src/config/: mod.rs
