[package]
name = "grpc-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12.1"
tonic-reflection = "0.12.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
prost = "0.13.1"
tonic-web = "0.12.1"
tower = { version = "0.5" }
tower-http = { version = "0.5.2", features = ["cors"] }
hyper-util = { version = "0.1.7" }

[build-dependencies]
tonic-build = "0.12.1"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
