[package]
name = "grpc-calculator"
version = "0.1.0"
authors = ["Rafael Konrath <rafael.konrath@gmail.com>"]
edition = "2021"

[dependencies]
tonic = "0.12.1"
tonic-reflection = "0.12.1"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros"] }
prost = "0.13.1"
tonic-web = "0.12.1"
tower = { version = "0.5" }
tower-http = { version = "0.5.2", features = ["cors"] }
hyper-util = { version = "0.1.7" }
config = "0.14.0"
serde = { version = "1.0.208", features = ["derive"] }
color-eyre = "0.6"
eyre = "0.6.12"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
sqlx = { version = "0.8.0", default-features = false, features = [ "runtime-tokio", "macros", "postgres" ] }

[build-dependencies]
tonic-build = "0.12.1"

[[bin]]
name = "serverdb"
path = "src/serverdb.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.release]
opt-level = 3
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false